--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			  <a href="/" class="active">Home</a>
 			  <a href="/research" class="">Research</a>
 			  <a href="/publications" class="">Publications</a>
-			  <a href="/contact" class="">Contact</a>>
+			  <a href="/contact" class="">Contact</a>
 			</nav>
         </header>
       </div>
