--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@
 
     <div id="main" role="main" class="container">
       <article class="page">
-	Under construction. PLease check back later.
+	Development in progress. Please check back later.
 
     </div>
 </article>
