--- a/research.html
+++ b/research.html
@@ -28,19 +28,8 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <!--script-->
-    <script>
-        update_pred_result = function (){
-            var h = document.getElementById("dam-height").value;
-            var v = document.getElementById("reservoir-volume").value;
-            document.getElementById("pred_tool_result").innerText = "Dam Height: " + h + " m, Reservoir Volume: " + v + " m³";
-        }
-        document.addEventListener("DOMContentLoaded", function () {
-            // Set the initial value of the prediction result
-            update_pred_result();
-            document.getElementById("dam-height").addEventListener('input', update_pred_result);
-            document.getElementById("reservoir-volume").addEventListener('input', update_pred_result);
-        });
-    </script>
+    <script src="peakfloweqns.js"></script>
+    <script src="peakflowpred.js"></script>
 
 </head>
 
@@ -78,15 +67,47 @@
             <p>To use the tool, please enter the required parameters below.</p>
             <div class="form-container">
                 <form id="pred_tool_form">
-                    <label for="dam-height">Dam Height (m):</label>
-                    <input type="number" id="dam-height" name="dam_height" value=5 required>
-
-                    <label for="reservoir-volume">Reservoir Volume (m³):</label>
-                    <input type="number" id="reservoir-volume" name="reservoir_volume" value=30000 required>
+                    <label for="H-w">Height of water (m):</label>
+                    <input type="number" id="H-w" name="H-w" value=5 required>
+                    <br />
+                    <label for="V-w">Volume of water (m³):</label>
+                    <input type="number" id="V-w" name="V-w" value=30000 required>
+                    <br />
+                    <label for="erodibility">Erodibility:</label>
+                    <select id="erodibility" name="erodibility">
+                        <option value="low">Low</option>
+                        <option value="medium" selected>Medium</option>
+                        <option value="high">High</option>
+                    </select>
+                    <br />
+                    <select id="failure_mode" name="failure_mode">
+                        <option value="piping" >Piping/internal erosion</option>
+                        <option value="overtopping" selected>Overtopping</option>
+                    </select>
+                    <br />
+                    <label for="q-eqn-select">Peak Flow Equation:</label>
+                    <select id="q-eqn-select" name="q-equation">
+                        <option value="Xu09" selected>Xu and Zhang (2009)</option>
+                        <option value="Ho14">Hooshyaripor et al. (2014)</option>
+                        <option value="Az15">Azimi et al. (2015)</option>
+                        <option value="Fr16">Froehlich (2016)</option>
+                        <option value="Zh20">Zhang et al. (2020)</option>
+                        <option value="Ya25">Yassin et al. (2025)</option>
+                    </select>
+                    <em><div id="q-eqn-desc"></div></em>
                 </form>
             </div>
             <br />
-            <p>The value that you entered was: <div id="pred_tool_result"></div></p>
+            <p>The estimated peak flow is <b><div id="q-pred-result"></div></b> m³/s</p>
+            <p>Based on this equation's performance in Yassin et al. (2025), there is 95% confidence that
+                the true peak flow is less than <b><span id="q-upper-result"></span></b> m³/s.</p>
+            <br />
+            <br />
+            <p><em>The reliability and accuracy of any results obtained from this tool 
+                should be carefully examined by experienced engineers. 
+                In no event shall the creator of this tool be liable for lost profits or
+                any special, incidental or consequential damages arising out of
+                or in connection with use of this tool regardless of cause.</em></p>
         </article>
     </div>
 
