added three peak flow equations

--- a/research.html
+++ b/research.html
@@ -95,6 +95,7 @@
                         <tr>
                             <td><label for="q-eqn-select">Peak Flow Equation:</label></td>
                             <td class="tool-input"><select id="q-eqn-select" name="q-equation">
+                                <option value="Fr95">Froehlich (1995)</option>
                                 <option value="Xu09" selected>Xu and Zhang (2009)</option>
                                 <option value="Ho14">Hooshyaripor et al. (2014)</option>
                                 <option value="Az15">Azimi et al. (2015)</option>
