--- a/research.html
+++ b/research.html
@@ -65,17 +65,30 @@
                 to produce estimates for the <b>peak flow</b>, <b>time to failure</b>, and
                 <b>breach width</b> of an embankment dam failure.
             </p>
-            <p>To use the tool, please enter the required parameters below.</p>
+            <p>To use the tool, please enter the required parameters below. See the schematic below for information about each parameter.</p>
+            <img src="images/dimension_schematic.tif" width="40%" />
             <div class="form-container">
                 <table width="100%">
                     <form id="pred_tool_form">
                         <tr>
-                            <td><label for="H-w">Height of water (m):</label></td>
-                            <td class="tool-input"><input type="number" id="H-w" name="H-w" value=5 required></td>
+                            <td><label for="H-w">Height of water, H<sub>w</sub> (m), from the breach bottom</label></td>
+                            <td class="tool-input"><input type="number" id="H-w" name="H-w" value=5 min="0" required></td>
                         </tr>
                         <tr>
-                            <td><label for="V-w">Volume of water (m³):</label></td>
-                            <td class="tool-input"><input type="number" id="V-w" name="V-w" value=30000 required></td>
+                            <td><label for="H-b">Depth of breach, H<sub>b</sub> (m), from the crest</label></td>
+                            <td class="tool-input"><input type="number" id="H-b" name="H-b" min="0"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="H-d">Height of dam, H<sub>d</sub> (m), from foundation to crest</label></td>
+                            <td class="tool-input"><input type="number" id="H-d" name="H-d" min="0"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="width">Average embankment width, W<sub>avg</sub> (m)</label></td>
+                            <td class="tool-input"><input type="number" id="width" name="width" min="0"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="V-w">Volume of water, V<sub>w</sub> (m³), above the breach bottom</label></td>
+                            <td class="tool-input"><input type="number" id="V-w" name="V-w" value=30000 min="0"required></td>
                         </tr>
                         <tr>
                             <td><label for="erodibility">Erodibility:</label></td>
@@ -86,14 +99,21 @@
                             </select></td>
                         </tr>
                         <tr>
-                            <td><label for="failure_mode">Failure Mode:</label></td>
-                            <td class="tool-input"><select id="failure_mode" name="failure_mode">
+                            <td><label for="failure-mode">Failure mode:</label></td>
+                            <td class="tool-input"><select id="failure-mode" name="failure-mode">
                                 <option value="piping" >Piping/internal erosion</option>
                                 <option value="overtopping" selected>Overtopping</option>
                             </select></td>
                         </tr>
                         <tr>
-                            <td><label for="q-eqn-select">Peak Flow Equation:</label></td>
+                            <td><label for="dam-type">Dam type:</label></td>
+                            <td class="tool-input"><select id="dam-type" name="dam-type">
+                                <option value="homogenous" selected>Homogenous-fill</option>
+                                <option value="core-wall" >Core-wall</option>
+                            </select></td>
+                        </tr>
+                        <tr>
+                            <td><label for="q-eqn-select">Peak flow equation:</label></td>
                             <td class="tool-input"><select id="q-eqn-select" name="q-equation">
                                 <option value="Fr95">Froehlich (1995)</option>
                                 <option value="Xu09" selected>Xu and Zhang (2009)</option>
@@ -105,11 +125,16 @@
                             </select></td>
                         </tr>
                         <tr>
+                            <td><label for='q-use-recal'>Use recalibrated equation based on Yassin et al. (2025)?</label></td>
+                            <td class="tool-input"><input type="checkbox" id="q-use-recal" name="q-use-recal"></td>
+                        </tr>
+                        <tr>
                             <td colspan="2"><em><div id="q-eqn-desc"></div></em></td>
                         </tr>
                     </form>
                 </table>
             </div>
+            <b id="q-warning-msg"></b>
             <br />
             <p>The estimated peak flow is <b><span id="q-pred-result"></span></b> m³/s.</p>
             <p>Based on this equation's performance in Yassin et al. (2025), there is 95% confidence that
