--- a/research.html
+++ b/research.html
@@ -59,14 +59,15 @@
             Development in progress. Please check back later.
             <br/>
 
-            <h3>Using Empirical Equations to Predict Dam Breach Characteristics</h3>
-            <p>This tool uses a variety of empirical equations for dam breach characteristics
+            <h3>Using Empirical Equations to Predict Embankment Dam Breach Characteristics</h3>
+            <p>This tool uses empirical equations for dam breach characteristics
                 as well as findings from my study evaluating and recalibrating these equations
                 to produce estimates for the <b>peak flow</b>, <b>time to failure</b>, and
                 <b>breach width</b> of an embankment dam failure.
             </p>
-            <p>To use the tool, please enter the required parameters below. See the schematic below for information about each parameter.</p>
-            <img src="images/dimension_schematic.tif" width="40%" />
+            <p>To use the tool, please enter the required parameters below. See the schematic
+                below for information about each parameter.</p>
+            <img src="images/dimension_schematic.png" width="40%" />
             <div class="form-container">
                 <table width="100%">
                     <form id="pred_tool_form">
@@ -125,7 +126,7 @@
                             </select></td>
                         </tr>
                         <tr>
-                            <td><label for='q-use-recal'>Use recalibrated equation based on Yassin et al. (2025)?</label></td>
+                            <td><label for='q-use-recal'>Use recalibrated equation?</label></td>
                             <td class="tool-input"><input type="checkbox" id="q-use-recal" name="q-use-recal"></td>
                         </tr>
                         <tr>
