implemented recalibrated q eqns

--- a/research.html
+++ b/research.html
@@ -67,7 +67,7 @@
             </p>
             <p>To use the tool, please enter the required parameters below. See the schematic
                 below for information about each parameter.</p>
-            <img src="images/dimension_schematic.png" width="40%" />
+            <img src="images/dimension_schematic.png" width="80%" text-align="center"/>
             <div class="form-container">
                 <table width="100%">
                     <form id="pred_tool_form">
