result visual improved

--- a/research.html
+++ b/research.html
@@ -56,8 +56,6 @@
 
     <div id="main" role="main" class="container">
         <article class="page">
-            Development in progress. Please check back later.
-            <br/>
 
             <h3>Using Empirical Equations to Predict Embankment Dam Breach Characteristics</h3>
             <p>This tool uses empirical equations for dam breach characteristics
@@ -137,9 +135,11 @@
             </div>
             <b id="q-warning-msg"></b>
             <br />
-            <p>The estimated peak flow is <b><span id="q-pred-result"></span></b> m³/s.</p>
-            <p>Based on this equation's performance in Yassin et al. (2025), there is 95% confidence that
-                the true peak flow is less than <b><span id="q-upper-result"></span></b> m³/s.</p>
+            <div class="result-container">
+                <p>The estimated peak flow is <b><span id="q-pred-result"></span></b> m³/s.</p>
+                <p>Based on this equation's performance in Yassin et al. (2025), there is 95% confidence that
+                    the true peak flow is less than <b><span id="q-upper-result"></span></b> m³/s.</p>
+            </div>
             <br />
             <br />
             <p><em>The reliability and accuracy of any results obtained from this tool 
