--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
                                 <option value="Ho14">Hooshyaripor et al. (2014)</option>
                                 <option value="Az15">Azimi et al. (2015)</option>
                                 <option value="Fr16">Froehlich (2016)</option>
-                                <option value="Zh20">Zhang et al. (2020)</option>
+                                <option value="Zh20">Zhong et al. (2020)</option>
                                 <option value="Ya25">Yassin et al. (2025)</option>
                             </select></td>
                         </tr>
