--- a/research.html
+++ b/research.html
@@ -128,7 +128,7 @@
                             <td class="tool-input"><input type="checkbox" id="q-use-recal" name="q-use-recal"></td>
                         </tr>
                         <tr>
-                            <td colspan="2"><em><div id="q-eqn-desc"></div></em></td>
+                            <td colspan="2">Notes:<em><div id="q-eqn-desc"></div></em></td>
                         </tr>
                     </form>
                 </table>
