--- a/research.html
+++ b/research.html
@@ -30,7 +30,9 @@
     <!--script-->
     <script src="peakfloweqns.js"></script>
     <script src="peakflowpred.js"></script>
-
+    <!--chartist-->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 </head>
 
 
